--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -16,3 +16,8 @@ spec:
     env:
     - name: BP_JVM_VERSION
       value: "17"
+  params:
+    - name: testing_pipeline_matching_labels
+      value:
+        apps.tanzu.vmware.com/pipeline: test
+        apps.tanzu.vmware.com/language: java
